cabal-version:      3.0
name:               diamond
version:            0.1.0.0
synopsis:           diamond

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable diamond-v1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0

    -- Directories containing source files.
    hs-source-dirs: v1
    default-language: Haskell2010
